--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,10 +46,10 @@
 		"ostream": "cpp",
 		"ranges": "cpp",
 		"span": "cpp",
+		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"cinttypes": "cpp",
-		"typeinfo": "cpp",
-		"sstream": "cpp"
+		"typeinfo": "cpp"
 	}
 }
