--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,12 @@
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"cinttypes": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"bitset": "cpp",
+		"complex": "cpp",
+		"list": "cpp",
+		"set": "cpp",
+		"typeindex": "cpp",
+		"variant": "cpp"
 	}
 }
